--- a/frontend/Login.html
+++ b/frontend/Login.html
@@ -11,71 +11,191 @@
         crossorigin="anonymous"></script>
 
         <script type="text/javascript" src="Login.js"></script>
+        
     <style>
-        .login-form {
+        /* .login-form {
             width: 60vw;
             margin: auto;
             margin-top: 10vh;
             background: aliceblue;
             padding: 20px;
             border-radius: 14px
-        }
+        } */
+
+        body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Arial', sans-serif;
+  background: #f8f9fa;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+
+.login-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.login-card {
+  background: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  width: 500px;
+  height: 36em;
+  text-align: center;
+  padding: 40px;
+  box-sizing: border-box;
+}
+
+.login-card h1 {
+  color: #343a40;
+  margin-bottom: 30px;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+.login-form input {
+  width: 100%;
+  padding: 12px;
+  margin-bottom: 20px;
+  box-sizing: border-box;
+  border: 1px solid #dee2e6;
+  border-radius: 4px;
+}
+
+.login-buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.login-button,
+.register-button {
+  flex: 48%;
+  padding: 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background 0.3s ease-in-out, border 0.3s ease-in-out;
+}
+
+.login-button {
+  background: #007bff;
+  color: #fff;
+  margin-right: 5px; /* margin kiri untuk tombol login */
+}
+
+.register-button {
+  border: 1px solid #007bff;
+  color: #007bff;
+  margin-left: 5px; /* margin kanan untuk tombol register */
+}
+
+.login-button:hover {
+  background: #0056b3;
+}
+
+@media screen and (max-width: 600px) {
+  .login-card {
+    width: 90%;
+  }
+
+  .login-buttons {
+    flex-direction: column;
+  }
+
+  .login-button,
+  .register-button {
+    flex: 100%;
+    margin-bottom: 10px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+.fa {
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  padding: 5px 0 5px 0;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-google {
+  background: #dd4b39;
+  color: white;
+}
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+.register-button{
+    text-decoration: none;
+}
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-    <div>
-        <div class="login-form">
-            <!-- Email input -->
-            <div class="form-outline mb-4">
-                <label class="form-label">User Email :-</label>
-                <input type="Email" class="form-control" placeholder="Enter your Email..." ID="userEmail" />
+    <div class="login-container">
+       
+        <div class="login-card">
+            <div class="title">
+                <h2>Sign In</h2><br>
             </div>
-
-            <!-- Password input -->
-            <div class="form-outline mb-4">
-                <label class="form-label">Password :-</label>
-                <input type="password" ID="password" class="form-control" placeholder="Enter password..." />
+          <form class="login-form" action="Login.js" method="Post" id="LoginUser">
+            <input type="email" placeholder="UserEmail" ID="userEmail" required>
+            <input type="password" placeholder="Password" ID="password" required>
+            <div class="login-buttons">
+              <button type="submit" class="login-button">Login</button>
             </div>
+          </form>
+          <div class="text-left">
+            <a href="#!" style="vertical-align: bottom">Forgot password?</a><br />
+            <br />
+            <p>Not a member? 
+                <a href="Register.html" class="register-button">Register</a>
+            </p><br>
+            <p>or sign up with:</p>
+            <button type="button" class="btn btn-link btn-floating mx-1">
+                <a href="#" class="fa fa-facebook"></a>
+            </button>
 
-            <!-- 2 column grid layout for inline styling -->
-            <div class="row mb-4">
-                <div class="col d-flex justify-content-left">
-                    <!-- Checkbox -->
-                    <Button ID="signin" Text="Sign in" class="btn btn-success btn-block mb-4" OnClick="signin()">Sign In</Button>
-                    &nbsp;&nbsp;&nbsp;
-                </div>
+            <button type="button" class="btn btn-link btn-floating mx-1">
+                <a href="#" class="fa fa-google"></a>
+            </button>
 
+            <button type="button" class="btn btn-link btn-floating mx-1">
+                <a href="#" class="fa fa-twitter"></a>
+            </button>
 
-            </div>
-
-            <!-- Submit button -->
-
-
-            <!-- Register buttons -->
-            <div class="text-left">
-                <a href="#!" style="vertical-align: bottom">Forgot password?</a><br />
-                <br />
-                <p>Not a member? <a href="Register.html">Register</a></p>
-                <p>or sign up with:</p>
-                <button type="button" class="btn btn-link btn-floating mx-1">
-                    <i class="fab fa-facebook-f"></i>
-                </button>
-
-                <button type="button" class="btn btn-link btn-floating mx-1">
-                    <i class="fab fa-google"></i>
-                </button>
-
-                <button type="button" class="btn btn-link btn-floating mx-1">
-                    <i class="fab fa-twitter"></i>
-                </button>
-
-                <button type="button" class="btn btn-link btn-floating mx-1">
-                    <i class="fab fa-github"></i>
-                </button>
-            </div>
+            <button type="button" class="btn btn-link btn-floating mx-1">
+                <a href="#" class="fa fa-linkedin"></a>
+            </button>
         </div>
-    </div>
+        </div>
+      </div>
+
 </body>
 
 </html>
