--- a/frontend/Register.html
+++ b/frontend/Register.html
@@ -31,7 +31,7 @@
                                             <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                                             <div class="form-outline flex-fill mb-0">
                                                 <label class="form-label" for="form3Example3c">Enter Your Email</label>
-                                                <input class="form-control" id="userEmail" type="Email"/>
+                                                <input class="form-control" id="userEmail" type="email" required/>
 
                                             </div>
                                         </div>
@@ -40,7 +40,7 @@
                                             <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                                             <div class="form-outline flex-fill mb-0">
                                                 <label class="form-label" for="form3Example4c">Password</label>
-                                                <input class="form-control" id="password" type="password"/>
+                                                <input class="form-control" id="password" type="password" required/>
                                             </div>
                                         </div>
 
@@ -48,7 +48,7 @@
                                             <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                                             <div class="form-outline flex-fill mb-0">
                                                 <label class="form-label" for="form3Example4cd">Repeat your password</label>
-                                                <input class="form-control" id="repeatpassword" type="password"/>
+                                                <input class="form-control" id="repeatpassword" type="password" required/>
                                             </div>
                                         </div>
 
