evalution task update

--- a/frontend/Invoice.html
+++ b/frontend/Invoice.html
@@ -12,16 +12,13 @@
   <script defer src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.js"></script>
   <script type="text/javascript" src="Invoice.js"></script>
   <style>
-    .modal-header {
-      margin-top: 30px;
-    }
+    
 
     h4 {
       margin: 0 10px 10px 10px;
     }
 
     #model-content {
-      margin-left: -228px;
       width: 173%;
      position: fixed;
     }
@@ -38,6 +35,10 @@
     .create{
       border: 2px solid black;
       margin-bottom: 30px;
+    }
+    .modal-dialog{
+      display: flex;
+      justify-content: center;
     }
   </style>
   <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.css" />
