--- a/frontend/index.html
+++ b/frontend/index.html
@@ -95,8 +95,8 @@
             <div class="modal-body">
                 <div class="detail">
                     <ul>
-                        <input id="partyNameEdit" class="form-control" type="text" aria-label="input example" style="margin-left: 10px;" placeholder="Enter partyName"><br>
-        <button style="width: 10vw; margin-left: 10px;" onclick="editFromModel()">Edit</button>
+                        <input id="partyNameEdit" class="form-control" type="text" aria-label="input example" style="width: 88%;" placeholder="Enter partyName"><br>
+        <button style="width: 10vw;" onclick="editFromModel()">Edit</button>
                     </ul>
                 </div>
             </div>
