--- a/frontend/Product.html
+++ b/frontend/Product.html
@@ -96,8 +96,8 @@
             <div class="modal-body">
                 <div class="detail">
                     <ul>
-                        <input id="productNameEdit" class="form-control" type="text" aria-label="input example" style="margin-left: 10px;" placeholder="Enter productName"><br>
-        <button style="width: 10vw; margin:0 10px 10px 10px;" onclick="editFromModel()">Edit</button>
+                        <input id="productNameEdit" class="form-control" type="text" aria-label="input example" style="width: 88%;" placeholder="Enter productName"><br>
+        <button style="width: 10vw" onclick="editFromModel()">Edit</button>
                     </ul>
                 </div>
             </div>
